--- a/Home/index.html
+++ b/Home/index.html
@@ -1,1 +1,58 @@
 
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../CSS/home.css">
+    <title>Exolore Indore</title>
+</head>
+
+<body>
+    <nav id="navbar">
+        <ul>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="../Heritage/heritage.html">Heritage</a></li>
+            <li><a href="../Hotel Booking/hotel.html">Hotel Booking</a></li>
+            <li><a href="../Gallery/gallery.html">Gallery</a></li>
+        </ul>
+    </nav>
+    <br>
+
+    <div class="about">
+        <h2>About Indore</h2><br>
+        <p>Indore, the center of Indian Territory, is the heart of India, which gleams with grandeur, history, growth, and
+        modernity. This largest city of Madhya Pradesh has a unique confluence of natural abundance, historical edifices, and
+        contemporary structures, all mixed into one. Situated at an altitude soaring 553 m above the sea level, Indore is full
+        of architectural elegance and industrial progress.
+    This diversity also spans to the culture of this city where history beautifully co-exists with the contemporary. Indore
+    is the nucleus of education and health care sector in India with numerous educational institutes dotting the whole city.</p>
+<br>
+<h2>History of Indore</h2><br>
+<p>History of this city is inter-weaved with the battles between Marathas, Mughals, and British while its erstwhile reigns
+rested with the Zamindars of Malwa plateau on which the city is located. These zamindars or landlords were affluent and
+quite dominant in this region.
+
+The families of these zamindars enjoyed the status of being confirmatory Sanads conferred on them by Mughal emperors.
+Rao Nandlal Chaudhary was the most influential zamindar of Malwa having an army of 2000 warriors behind him. He also
+held a distinctive position in the court of Mughal emperors who presented him two jewel studded swords as a mark of
+recognition.
+About Indore City
+Around 1713, the entire region of Deccan Plateau went into the reigns of Nizam of Hyderabad. While the conflicts were
+constantly going on between Marathas and Mughals, Rao Nandlal one visited Indreshwar Temple on the banks of Saraswati
+river.
+
+Finding it to be a safe and nature protected place, he built a citadel here and named it Indrapur which later changed
+over to Indore under British raj.
+
+Later this area was handed over to Maratha rulers, Holkars under the control of Malhar Rao Holkar, the founder of this
+dynasty. Indore was a princely state and an integral part of Holkar Empire until the rise of British in this region.
+Till acceding to Indian Union on independence in 1947, it was ruled by them. Later on, it became the summer capital of
+Madhya Bharat before its merger into Madhya Pradesh in 1956.</p>
+    </div>
+
+</body>
+
+</html>
