--- a/Gallery/gallery.html
+++ b/Gallery/gallery.html
@@ -12,7 +12,7 @@
 <body>
     <nav id="navbar">
         <ul>
-        <li><a href="../Home/index.html">Home</a></li>
+        <li><a href="./index.html">Home</a></li>
             <li><a href="../Heritage/heritage.html">Heritage</a></li>
             <li><a href="../Hotel Booking/hotel.html">Hotel Booking</a></li>
             <li><a href="./gallery.html">Gallery</a></li>
