--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <nav id="navbar">
         <ul>
             <li><a href="./index.html">Home</a></li>
-            <li><a href="../Heritage/heritage.html">Heritage</a></li>
-            <li><a href="../Hotel Booking/hotel.html">Hotel Booking</a></li>
-            <li><a href="../Gallery/gallery.html">Gallery</a></li>
+            <li><a href="./Heritage/heritage.html">Heritage</a></li>
+            <li><a href="./Hotel Booking/hotel.html">Hotel Booking</a></li>
+            <li><a href="./Gallery/gallery.html">Gallery</a></li>
         </ul>
     </nav>
     <br>
